# trade-bot-hardcore-spec

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  FINAL_TECHNICAL_AUDIT.md  GEMINI.md  INITIAL_REVIEW_REPORT.md  README.md  RUN.md  audit_phase1_sync.md  audit_phase2_numeric.md  audit_phase3_executor.md  check_keys.js  conanfile.txt  config.toml  dom_ladder_spread_fix.html  monitor_all_ws.js  package-lock.json  package.json  temp_dash.cpp  test_notifications.js  test_notifications_long.js  test_parser_live.js  test_raw.js  test_screener_sub.js  test_signals.js  test_ws_ob.js  test_ws_raw.js  test_ws_trades.js  tickers_full.json  verify_ws.js  ЗАДАНИЕ_CLAUDE_CODE.md  План__core_probe_—_AI-friendly_диагностический_CLI_для_трассировки_core__и_отслеживания_ошибок.md
.agents/: knowledge.md  (+1 more)
core/: CMakeLists.txt  CMakePresets.json  conanfile.txt
core/bench/: bench_density_detector.cpp  bench_end_to_end_pipeline.cpp  bench_feature_extractor.cpp  bench_kde.cpp  bench_kde_standalone.cpp  bench_orderbook_apply.cpp  bench_strategy_engine_tick.cpp
core/src/: main.cpp
core/src/app/: BotApp.hpp  BotAppInit.cpp  BotAppRun.cpp  PipelineProcessor.cpp  PipelineProcessor.hpp
core/src/config/: Config.cpp  Config.hpp
core/src/control/: ClockDriftMonitor.cpp  ClockDriftMonitor.hpp  DashboardServer.cpp  DashboardServer.hpp  DashboardServerBinary.cpp  KillSwitch.cpp  SntpClient.cpp  SntpClient.hpp  TickerController.hpp
core/src/domain/: Ticker.hpp  Types.hpp
core/src/executor/: IExecutor.hpp  LiveExecutor.cpp  LiveExecutor.hpp  PaperExecutor.cpp  PaperExecutor.hpp  StartupRecovery.cpp  StartupRecovery.hpp
core/src/features/: ChartHistory.hpp  FeatureExtractor.cpp  FeatureFrame.hpp
core/src/logger/: Logger.cpp  TradeJournal.cpp  TradeJournal.hpp
core/src/marketdata/: ClusterSnapshot.cpp  ClusterSnapshot.hpp  KalmanLagEstimator.cpp  KalmanLagEstimator.hpp  LeaderTracker.cpp  LeaderTracker.hpp  OrderBook.cpp  OrderBook.hpp  TradeStream.cpp  TradeStream.hpp
core/src/metrics/: AlertWebhook.hpp  MetricsExporter.cpp  MetricsExporter.hpp  MetricsRegistry.cpp  MetricsRegistry.hpp
core/src/numeric/: Clustering.hpp  Dema.hpp  FixedPoint.hpp  HdrHistogramWrapper.hpp  Kde.hpp  PriceUtils.hpp  TDigest.hpp  Welford.hpp  WelfordCorrelation.hpp  ZigZag.hpp
core/src/perf/: LatencyTracer.hpp  MpmcQueue.hpp  PerfRegistry.cpp  PerfRegistry.hpp  SimdOps.cpp  TimestampMonitor.cpp  TimestampMonitor.hpp  TraceContext.hpp  TraceId.cpp  TraceTimeBuffer.hpp
core/src/risk/: AccountState.hpp  AccountStatePersister.cpp  AccountStatePersister.hpp  NewsCalendar.cpp  NewsCalendar.hpp  RiskManager.cpp  RiskManager.hpp
core/src/signals/: ApproachAnalyzer.cpp  ApproachAnalyzer.hpp  DensityDetector.cpp  DensityDetector.hpp  IDetector.hpp  IcebergDetector.cpp  IcebergDetector.hpp  LeaderSignal.cpp  LeaderSignal.hpp  LevelDetector.cpp  LevelDetector.hpp  Signal.hpp  SignalBus.cpp  SignalBus.hpp  SignalLevelBridge.cpp  SignalLevelBridge.hpp  TapeAnalyzer.cpp  TapeAnalyzer.hpp
core/src/strategy/: BounceFromDensity.cpp  BounceFromDensity.hpp  BreakoutEatThrough.cpp  BreakoutEatThrough.hpp  FlushReversal.cpp  FlushReversal.hpp  IStrategy.hpp  LeaderLag.cpp  LeaderLag.hpp  StrategyContext.hpp  StrategyEngine.cpp  StrategyEngine.hpp  TradePlan.hpp
core/src/trading/: ActiveTrade.hpp  OrderReconciliator.cpp  OrderReconciliator.hpp
core/src/transport/: BeastWsClient.cpp  BeastWsClient.hpp  Clocks.hpp  ClusterSnapshotClient.cpp  ClusterSnapshotClient.hpp  CurlHttpClient.cpp  CurlHttpClient.hpp  DumpRecorder.cpp  DumpRecorder.hpp  FinresHandler.cpp  FinresHandler.hpp  IOrderGateway.hpp  IWsClient.hpp  MarketDataFeed.cpp  MarketDataFeed.hpp  MetaScalpCodec.cpp  MetaScalpCodec.hpp  MetaScalpDiscovery.cpp  MetaScalpDiscovery.hpp  NotificationFeed.cpp  NotificationFeed.hpp  OrderGateway.cpp  OrderGateway.hpp  ReplayFeed.cpp  ReplayFeed.hpp  SignalLevelGateway.cpp  SignalLevelGateway.hpp
core/src/universe/: OrderbookSettingsLoader.cpp  OrderbookSettingsLoader.hpp  TickerUniverse.cpp  TickerUniverse.hpp  UniverseFilters.cpp  UniverseFilters.hpp
core/src/utils/: CircularBuffer.hpp  FixedString.hpp  TickerSymbol.hpp  UrlEncoder.hpp
core/test/: CMakeLists.txt
core/test/integration/: replay_determinism_test.cpp  risk_flow_test.cpp  state_persistence_test.cpp  ws_smoke_test.cpp
core/test/unit/: approach_analyzer_test.cpp  approach_zigzag_test.cpp  bounce_strategy_test.cpp  breakout_strategy_test.cpp  cluster_snapshot_codec_test.cpp  cluster_snapshot_manager_test.cpp  codec_test.cpp  config_test.cpp  dashboard_server_test.cpp  density_detector_test.cpp  domain_test.cpp  executor_state_machine_test.cpp  feature_extractor_test.cpp  feature_welford_test.cpp  feed_test.cpp  flushreversal_strategy_test.cpp  http_client_test.cpp  iceberg_bayesian_test.cpp  iceberg_detector_test.cpp  kalman_lag_estimator_test.cpp  leader_signal_test.cpp  leader_test.cpp  leaderlag_strategy_test.cpp  level_dbscan_test.cpp  level_detector_test.cpp  metrics_exporter_test.cpp  news_calendar_test.cpp  notification_routing_test.cpp  numeric_test.cpp  order_gateway_test.cpp  order_reconciliator_test.cpp  orderbook_settings_loader_test.cpp  orderbook_test.cpp  r13_funding_test.cpp  replay_test.cpp  risk_manager_test.cpp  signal_level_bridge_test.cpp  startup_recovery_test.cpp  strategy_engine_test.cpp  strategy_status_consistency_test.cpp  (+7 more)
core/tool/core_probe/: AiRecipeRunner.cpp  AiRecipeRunner.hpp  AssertRunner.cpp  AssertRunner.hpp  CliOptions.cpp  CliOptions.hpp  DiffRunner.cpp  DiffRunner.hpp  InvariantChecker.cpp  InvariantChecker.hpp  LiveRunner.cpp  LiveRunner.hpp  MockRiskTestStrategy.hpp  PROBE_LOG.md  ProbePipeline.cpp  ProbePipeline.hpp  ReplayRunner.cpp  ReplayRunner.hpp  SchemaRunner.cpp  SchemaRunner.hpp  SummaryCollector.cpp  SummaryCollector.hpp  SynthRunner.cpp  SynthRunner.hpp  SyntheticFeed.cpp  SyntheticFeed.hpp  TraceEvent.hpp  TraceFormatter.cpp  TraceFormatter.hpp  TraceLogger.cpp  TraceLogger.hpp  main.cpp
core/tool/labeler/: main.cpp  report.sh
(+374 files in other folders)
